[gd_scene load_steps=11 format=3 uid="uid://bsoe42l3gh7hf"]

[ext_resource type="Texture2D" uid="uid://l1pl8qfsfbd2" path="res://Assets/UI/HUD/Minimap-border.png" id="1"]
[ext_resource type="Script" path="res://Scripts/UI/PulseLine.gd" id="2"]
[ext_resource type="Script" path="res://Scripts/UI/Minimap.gd" id="3"]
[ext_resource type="Script" path="res://Scripts/UI/EnemyMarker.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://b24kjfey7ajs8" path="res://Assets/UI/HUD/Map Markers/ObjectiveMarker.png" id="5"]
[ext_resource type="Texture2D" uid="uid://ctfvj6we6huiq" path="res://Assets/UI/HUD/Map Markers/EnemyMarker.png" id="6"]
[ext_resource type="Texture2D" uid="uid://exu3s1njvfos" path="res://Assets/UI/HUD/Map Markers/PlayerMarker.png" id="7"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(28, 32)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(320, 1)

[node name="Minimap" type="MarginContainer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -335.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("3")

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Grid" type="ColorRect" parent="Container"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="PlayerMarker" type="Sprite2D" parent="Container/Grid"]
z_index = 2
texture = ExtResource("7")

[node name="EnemyMarker" type="CharacterBody2D" parent="Container/Grid"]
visible = false
collision_layer = 512
collision_mask = 512
script = ExtResource("4")

[node name="EnemySprite" type="Sprite2D" parent="Container/Grid/EnemyMarker"]
z_index = 1
texture = ExtResource("6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Grid/EnemyMarker"]
shape = SubResource("2")

[node name="ObjectiveMarker" type="CharacterBody2D" parent="Container/Grid"]
visible = false
collision_layer = 512
collision_mask = 512
script = ExtResource("4")

[node name="ObjectiveSprite" type="Sprite2D" parent="Container/Grid/ObjectiveMarker"]
z_index = 3
texture = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/Grid/ObjectiveMarker"]
shape = SubResource("3")

[node name="Frame" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1")
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Pulse" type="Node2D" parent="."]
z_index = 4

[node name="Area2D" type="Area2D" parent="Pulse"]
collision_layer = 512
collision_mask = 512
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pulse/Area2D"]
position = Vector2(320, 0)
shape = SubResource("1")

[node name="Line2D" type="Line2D" parent="Pulse/Area2D"]
points = PackedVector2Array(0, 0, 640, 0)
width = 2.0
default_color = Color(0.0352941, 0.67451, 0.0235294, 1)

[connection signal="body_entered" from="Pulse/Area2D" to="Pulse/Area2D" method="_on_Area2D_body_entered"]
